@@ -1,0 +1,9 @@
+CC:=clang
+CXX:=clang++
+AR:=ar
+RANLIB:=ranlib
+NM:=nm
+#LD:=ld
+LD:=$(CXX)
+STRIP:=strip
+DOXYGEN:=doxygen
