@@ -1,0 +1,2 @@
+#$(warning 'local' toolchain name is depracted - use 'gcc' instead)
+include $(MAKEFILES_TOOLCHAINS_BASE_DIR)/gcc/flags.mk
