@@ -1,0 +1,13 @@
+#!/bin/bash
+
+if [ "$#" -lt 1 ]
+then
+  echo "$0 <component> [ <test_flag1> <test_flag2> ... ]" >&2
+  exit 1
+fi
+
+C="$1"
+shift
+
+clear
+time make "$C" PROFILE=test WITHOUT_DEPS=1 && ( cd gen/test_local_normal_default/$C/ && LD_LIBRARY_PATH="$LD_LIBRARY_PATH:../libs" time ./$C.t "$@" )
